<resources>
    <string name="app_name">Android Fundamental</string>
    <string name="movie_genre">Action, Adventure, Fantasy</string>
    <string name="avengers_title">AVENGERS: \n END GAME</string>
    <string name="pg13">13</string>
    <string name="age">%1$s+</string>
    <string name="back">Back</string>
    <string name="reviews">%1$s Reviews</string>
    <string name="text_overview">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="moviephotobackground">MoviePhotoBackground</string>
    <string name="star">star</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="actor_photo">Photo of actor</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="bg_poster">background for poster</string>
    <string name="target">target</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_poster">movie poster</string>
    <string name="like">like photo</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="movie_duration">%1$s MIN</string>
    <string name="pg16">16</string>
</resources>