<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <ImageView
        android:id="@+id/bgPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/bg_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTarget"
        android:contentDescription="@string/bg_poster" />

    <ImageView
        android:id="@+id/ivTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:src="@drawable/target"
        app:layout_constraintBottom_toBottomOf="@id/tvMovieList"
        app:layout_constraintEnd_toStartOf="@id/tvMovieList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMovieList"
        android:contentDescription="@string/target" />

    <TextView
        android:id="@+id/tvMovieList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/movie_list"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/ivTarget"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivPosterPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/gradient"
        android:src="@drawable/avg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTarget"
        android:contentDescription="@string/movie_poster" />

    <ImageView
        android:id="@+id/ivPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="@dimen/space_2x"
        android:src="@drawable/pg"
        app:layout_constraintStart_toStartOf="@id/ivPosterPhoto"
        app:layout_constraintTop_toTopOf="@id/ivPosterPhoto" />

    <TextView
        android:id="@+id/tvPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pg13"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ivPg"
        app:layout_constraintEnd_toEndOf="@id/ivPg"
        app:layout_constraintStart_toStartOf="@id/ivPg"
        app:layout_constraintTop_toTopOf="@id/ivPg" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="@id/ivPosterPhoto"
        app:layout_constraintTop_toTopOf="@id/ivPosterPhoto"
        android:contentDescription="@string/like" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginEnd="@dimen/space_4x"
        android:layout_marginBottom="22dp"
        android:text="@string/movie_genre"
        android:textColor="@color/genreColor"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/ivPosterPhoto"
        app:layout_constraintStart_toStartOf="@id/ivPosterPhoto" />

    <RatingBar
        android:id="@+id/rating"
        style="@style/customRatingBar8"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginBottom="@dimen/space_2x"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintBottom_toBottomOf="@id/ivPosterPhoto"
        app:layout_constraintStart_toStartOf="@id/ivPosterPhoto"
        app:layout_constraintTop_toBottomOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/reviews"
        android:textColor="@color/reviewColor"
        android:layout_marginStart="@dimen/space_2x"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/rating"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/rating" />

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginTop="@dimen/space_2x"
        android:fontFamily="@font/roboto_bold"
        android:text="Avengers: End Game"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/bgPoster"
        app:layout_constraintTop_toBottomOf="@id/ivPosterPhoto" />

    <TextView
        android:id="@+id/tvMovieTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:fontFamily="@font/roboto_bold"
        android:text="137 min"
        android:textColor="@color/timeColor"
        app:layout_constraintStart_toStartOf="@id/bgPoster"
        app:layout_constraintTop_toBottomOf="@id/tvMovieName"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>