<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MovieDeatilsActivity">

        <ImageView
            android:id="@+id/bgAvengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_avengers"
            android:contentDescription="@string/moviephotobackground"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_2x"
                android:contentDescription="@string/back"
                android:gravity="center"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#FFFFFF" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="154dp"
            android:text="@string/pg13"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="AVENGERS: \nEND GAME"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title"
            app:layout_constraintStart_toEndOf="@id/tvAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAge" />


        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/genreColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <ImageView
            android:id="@+id/ivStar1"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_active"
            app:layout_constraintEnd_toStartOf="@id/ivStar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <ImageView
            android:id="@+id/ivStar2"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_active"
            app:layout_constraintEnd_toStartOf="@id/ivStar3"
            app:layout_constraintStart_toEndOf="@id/ivStar1"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <ImageView
            android:id="@+id/ivStar3"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_active"
            app:layout_constraintEnd_toStartOf="@+id/ivStar4"
            app:layout_constraintStart_toEndOf="@id/ivStar2"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <ImageView
            android:id="@+id/ivStar4"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_active"
            app:layout_constraintEnd_toStartOf="@id/ivStar5"
            app:layout_constraintStart_toEndOf="@id/ivStar3"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <ImageView
            android:id="@+id/ivStar5"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_inactive"
            app:layout_constraintEnd_toStartOf="@id/tvReviews"
            app:layout_constraintStart_toEndOf="@id/ivStar4"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:gravity="top"
            android:text="@string/reviews"
            android:textColor="@color/reviewColor"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ivStar5"
            app:layout_constraintTop_toBottomOf="@id/movieGenre" />

        <TextView
            android:id="@+id/storyLine"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/storyline"
            android:textColor="@color/titleWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReviews" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/text_overview"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/storyLine" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/cast"
            android:textColor="@color/titleWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <ImageView
            android:id="@+id/robert_jr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/robert_j"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/tvRobertJR"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/namesColor"
            app:layout_constraintStart_toStartOf="@+id/robert_jr"
            app:layout_constraintTop_toBottomOf="@+id/robert_jr" />

        <ImageView
            android:id="@+id/chris_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/chris_e"
            app:layout_constraintEnd_toStartOf="@id/mark_r"
            app:layout_constraintStart_toEndOf="@id/robert_jr"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/tvChrisE"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:text="@string/chris_evans"
            android:textColor="@color/namesColor"
            app:layout_constraintStart_toStartOf="@+id/chris_e"
            app:layout_constraintTop_toBottomOf="@+id/chris_e" />

        <ImageView
            android:id="@+id/mark_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/mark"
            app:layout_constraintEnd_toStartOf="@id/chris_h"
            app:layout_constraintStart_toEndOf="@id/chris_e"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/tvMarkR"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/namesColor"
            app:layout_constraintStart_toStartOf="@+id/mark_r"
            app:layout_constraintTop_toBottomOf="@+id/mark_r" />

        <ImageView
            android:id="@+id/chris_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/chris_h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/tvChrisH"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/namesColor"
            app:layout_constraintStart_toStartOf="@+id/chris_h"
            app:layout_constraintTop_toBottomOf="@+id/chris_h" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
