<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".MovieDeatilsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintGuide_begin="304dp" />

        <ImageView
            android:id="@+id/backDropMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/moviephotobackground"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_avengers"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_2x"
                android:contentDescription="@string/back"
                android:gravity="center"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="154dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/age"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutBack" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginEnd="@dimen/space_4x"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="AVENGERS:\nEND GAME"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title"
            app:layout_constraintStart_toEndOf="@id/tvAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAge" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginEnd="@dimen/space_4x"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/movie_genre"
            android:textColor="@color/genreColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/customRatingBar12"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:progressDrawable="@drawable/rating"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_2x"
            android:rating="4"
            android:stepSize="0.5"
            app:layout_constraintEnd_toStartOf="@id/tvReviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            android:text="@string/reviews"
            android:textColor="@color/reviewColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/movieGenre" />

        <TextView
            android:id="@+id/storyLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/storyline"
            android:textColor="@color/titleWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReviews" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginEnd="@dimen/space_4x"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_overview"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/storyLine" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cast"
            android:textColor="@color/titleWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rcActors"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="horizontal"
          android:clipToPadding="false"
          android:paddingStart="@dimen/space_4x"
          android:paddingEnd="@dimen/space_4x"
          tools:listitem="@layout/view_holder_actors"
          app:layout_constraintTop_toBottomOf="@id/cast"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

          tools:itemCount="5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
